apply max 1240px rules before 600px rules, and set the top to 0 to .book-body so that the toolbar can be displayed on small devices (max width 600px); there will be a 50px offset issue like the one I solved in 3bdb398b8ded06b50d4c174711a3c3051f4b7282 but I do not have an idea on how to fix it this time; it is much beter to avoid the invisible toolbar issue than having an offset, and I may revisit this issue in the future
closes #44

--- a/inst/resources/gitbook/css/plugin-bookdown.css
+++ b/inst/resources/gitbook/css/plugin-bookdown.css
@@ -17,6 +17,14 @@ span.search-highlight {
     left: 300px;
   }
 }
+@media (max-width: 1240px) {
+  .book .book-body.fixed {
+    top: 50px;
+  }
+  .book .book-body.fixed .body-inner {
+    top: auto;
+  }
+}
 @media (max-width: 600px) {
   .book.with-summary .book-header.fixed {
     left: calc(100% - 60px);
@@ -27,18 +35,13 @@ span.search-highlight {
     left: calc(100% - 60px);
     min-width: 300px;
   }
+  .book .book-body.fixed {
+    top: 0;
+  }
 }
 
 .book .book-body.fixed .body-inner {
   top: 50px;
-}
-@media (max-width: 1240px) {
-  .book .book-body.fixed {
-    top: 50px;
-  }
-  .book .book-body.fixed .body-inner {
-    top: auto;
-  }
 }
 .book .book-body .page-wrapper .page-inner section.normal sub, .book .book-body .page-wrapper .page-inner section.normal sup {
   font-size: 85%;
